--- a/circle.yml
+++ b/circle.yml
@@ -74,7 +74,9 @@ deployment:
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
-        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install deploy
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} install
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} deploy
         - mvn site:site site:stage
         - ./build-docs.sh:
             timeout: 360
