--- a/pom.xml
+++ b/pom.xml
@@ -1010,11 +1010,11 @@
             <!--<artifactId>jacoco-maven-plugin</artifactId>-->
             <!--<version>0.7.2.201409121644</version>-->
             <!--</plugin>-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>clirr-maven-plugin</artifactId>
-                <version>2.6.1</version>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>clirr-maven-plugin</artifactId>-->
+            <!--<version>2.6.1</version>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
