--- a/pom.xml
+++ b/pom.xml
@@ -529,6 +529,23 @@
             <!--<version>2.6.1</version>-->
             <!--</plugin>-->
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <reportSets>
+                    <reportSet>
+                        <!-- defines cobertura projects- and aggregate-report -->
+                        <id>cobertura</id>
+                        <reports>
+                            <report>cobertura</report>
+                        </reports>
+                        <configuration>
+                            <aggregate>true</aggregate>
+                        </configuration>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.14</version>
@@ -537,30 +554,28 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>javancss-maven-plugin</artifactId>
+                <version>2.1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.5</version>
+                <reportSets>
+                    <reportSet>
+                        <id>aggregate</id>
+                        <reports>
+                            <report>aggregate</report>
+                            <report>test-aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>2.7</version>
-
-                <!--<reportSets>-->
-                <!--<reportSet>-->
-                <!--<reports>-->
-                <!--<report>project-team</report>-->
-                <!--<report>mailing-list</report>-->
-                <!--<report>issue-tracking</report>-->
-                <!--<report>license</report>-->
-                <!--<report>scm</report>-->
-                <!--<report>index</report>-->
-                <!--<report>summary</report>-->
-                <!--<report>cim</report>-->
-                <!--<report>plugins</report>-->
-                <!--</reports>-->
-                <!--</reportSet>-->
-                <!--</reportSets>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -582,6 +597,9 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>taglist-maven-plugin</artifactId>
+                <configuration>
+                    <aggregate>true</aggregate>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -591,8 +609,14 @@
                     <effort>Max</effort>
                     <threshold>Low</threshold>
                     <xmlOutput>true</xmlOutput>
-                    <!-- Optional directory to put findbugs xdoc xml report -->
-                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.1</version>
+                <configuration>
+                    <aggregate>true</aggregate>
                 </configuration>
             </plugin>
         </plugins>
@@ -649,10 +673,6 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <!--<reportPlugins>-->
-
-
-                        <!--</reportPlugins>-->
                         <locales>en</locales>
                     </configuration>
                     <dependencies>
