--- a/pom.xml
+++ b/pom.xml
@@ -524,27 +524,33 @@
     <reporting>
         <plugins>
             <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <version>0.11</version>
+            </plugin>
+
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>clirr-maven-plugin</artifactId>
                 <version>2.6.1</version>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.6</version>
-                <reportSets>
-                    <reportSet>
-                        <!-- defines cobertura projects- and aggregate-report -->
-                        <id>cobertura</id>
-                        <reports>
-                            <report>cobertura</report>
-                        </reports>
-                        <configuration>
-                            <aggregate>true</aggregate>
-                        </configuration>
-                    </reportSet>
-                </reportSets>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>cobertura-maven-plugin</artifactId>-->
+            <!--<version>2.6</version>-->
+            <!--<reportSets>-->
+            <!--<reportSet>-->
+            <!--&lt;!&ndash; defines cobertura projects- and aggregate-report &ndash;&gt;-->
+            <!--<id>cobertura</id>-->
+            <!--<reports>-->
+            <!--<report>cobertura</report>-->
+            <!--</reports>-->
+            <!--<configuration>-->
+            <!--<aggregate>true</aggregate>-->
+            <!--</configuration>-->
+            <!--</reportSet>-->
+            <!--</reportSets>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
@@ -1052,6 +1058,19 @@
                 <!--</goals>-->
                 <!--</execution>-->
                 <!--</executions>-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <version>0.11</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!--<plugin>-->
             <!--<groupId>org.jacoco</groupId>-->
