--- a/circle.yml
+++ b/circle.yml
@@ -63,6 +63,8 @@ deployment:
         - "git tag ${release} || :"
         - git push --tags
         - git push origin master
+        - mvn site:site site:stage
+        - mv target/staging/* $CIRCLE_ARTIFACTS
 
   production:
     branch: master
@@ -82,3 +84,13 @@ deployment:
         - pack/pack.sh
         - pack/upload.sh ${release} ${CIRCLE_BUILD_NUM}
 #        - mvn scm-publish:publish-scm
+
+
+ development:
+    branch: dev
+    commands:
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -Dmaven.test.skip install
+        - mvn site:site site:stage
+        - mvn site:site site:stage
+        - mv target/staging/* $CIRCLE_ARTIFACTS
+
