--- a/circle.yml
+++ b/circle.yml
@@ -76,10 +76,7 @@ deployment:
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
-        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean
-        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -Dmaven.test.skip install
-        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -Dmaven.test.skip deploy
-        - mvn site:site site:stage  -Dmaven.test.skip=true
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} install deploy site:site site:stage
         - ./build-docs.sh:
             timeout: 360
         - pack/pack.sh
