--- a/pom.xml
+++ b/pom.xml
@@ -932,11 +932,11 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-                    <forkCount>3</forkCount>
+                    <forkCount>4</forkCount>
                     <reuseForks>false</reuseForks>
                     <argLine>-Xmx512m</argLine>
-                    <!--<parallel>methods</parallel>-->
-                    <!--<threadCount>10</threadCount>-->
+                    <parallel>methods</parallel>
+                    <threadCount>4</threadCount>
                 </configuration>
                 <dependencies>
                     <dependency>
