--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <maven.version>3.2.1</maven.version>
         <slf4j.version>1.7.7</slf4j.version>
         <buildNumber>0</buildNumber>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <groupId>me.neilellis</groupId>
