--- a/dollar-plugins/dollar-camel-plugin/pom.xml
+++ b/dollar-plugins/dollar-camel-plugin/pom.xml
@@ -24,6 +24,7 @@
         <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>takari-jar</packaging>
 
     <properties>
         <plugin.name>camel_uri</plugin.name>
