--- a/dollar-plugins/dollar-class-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-class-resolver-plugin/pom.xml
@@ -24,6 +24,8 @@
         <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>takari-jar</packaging>
+
     <properties>
         <plugin.name>class_resolver</plugin.name>
     </properties>
