--- a/dollar-plugins/dollar-mapdb-plugin/pom.xml
+++ b/dollar-plugins/dollar-mapdb-plugin/pom.xml
@@ -27,6 +27,7 @@
     <properties>
         <plugin.name>mapdb_uri</plugin.name>
     </properties>
+    <packaging>takari-jar</packaging>
 
     <artifactId>dollar-mapdb-plugin</artifactId>
     <dependencies>
