--- a/dollar-plugins/dollar-orientdb-learner-plugin/pom.xml
+++ b/dollar-plugins/dollar-orientdb-learner-plugin/pom.xml
@@ -28,6 +28,7 @@
     <properties>
         <plugin.name>orientdb_learner</plugin.name>
     </properties>
+    <packaging>takari-jar</packaging>
 
     <dependencies>
         <dependency>
