--- a/dollar-plugins/dollar-simple-execution-plugin/pom.xml
+++ b/dollar-plugins/dollar-simple-execution-plugin/pom.xml
@@ -28,6 +28,7 @@
     <properties>
         <plugin.name>simple_execution</plugin.name>
     </properties>
+    <packaging>takari-jar</packaging>
 
     <dependencies>
         <dependency>
