--- a/dollar-plugins/dollar-std-resources-plugin/pom.xml
+++ b/dollar-plugins/dollar-std-resources-plugin/pom.xml
@@ -27,6 +27,7 @@
     <properties>
         <plugin.name>std_uri</plugin.name>
     </properties>
+    <packaging>takari-jar</packaging>
 
     <artifactId>dollar-std-resources-plugins</artifactId>
     <dependencies>
