--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -25,6 +25,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+    <packaging>takari-jar</packaging>
 
     <artifactId>dollar-script</artifactId>
     <dependencies>
