--- a/app_template.yml
+++ b/app_template.yml
@@ -13,5 +13,5 @@ config:
   runcmd:
     - curl -L http://dl.bintray.com/neilellis/dollar/dollar-${release}-${CIRCLE_BUILD_NUM}.tgz > dollar.tgz
     - tar -zxvf dollar.tgz
-    - "echo 'PATH=$$PATH:$HOME/dollar/bin' >> $$HOME/.bashrc"
+    - "echo 'PATH=$PATH:$HOME/dollar/bin' >> $HOME/.bashrc"
 
