--- a/circle.yml
+++ b/circle.yml
@@ -62,7 +62,7 @@ deployment:
         - git pull origin master
         - git merge staging -m "Auto merge"
         - 'github-changes -o neilellis -r dollar -k ${GITHUB_TOKEN} -v  -n "In Progress: ${next_release}"'
-        - envsubst < app_template.yml > app.yml
+        - envsubst '$release:$CIRCLE_BUILD_NUM}' < app_template.yml > app.yml
         - git commit -a -m "Promotion from staging"
         - "git tag ${release} || :"
         - git push --tags
