--- a/app_template.yml
+++ b/app_template.yml
@@ -11,7 +11,5 @@ config:
   packages:
     - git
   runcmd:
-    - curl -L http://dl.bintray.com/neilellis/dollar/dollar-${release}-${CIRCLE_BUILD_NUM}.tgz > dollar.tgz
-    - tar -zxvf dollar.tgz
-    - "echo 'PATH=$PATH:$HOME/dollar/bin' >> $HOME/.bashrc"
+    - cd /home/dollar && curl -L http://dl.bintray.com/neilellis/dollar/dollar-${release}-${CIRCLE_BUILD_NUM}.tgz > dollar.tgz &&  tar -zxvf dollar.tgz &&  "echo 'PATH=$PATH:$HOME/dollar/bin' >> /home/dollar/.bashrc"
 
